Version 2.2.0.0
=================
bear:
Changed the IAMStreamSelect menu display, does not display pointers in the menu name anymore.
Fixed a bug with the MultiFileReader::Read() function where it was trying to read data past the end of the file.
Found and fixed a few more potential divide by zero bugs.
Fixed a bug in the MultiFileReader::Read() function where it would crash if the info array had no file-> class loaded.Fixed a potential problem with the IAMStreamSelect GetCount() function not returning 0 value if there are no streams.
Fixed a potential problem if you have a threaded call to CTSFileSourcePin::GetAvailable() function if the FileReader class does not exist such as when reloading.

Version 2.1.1.9
=================
bear:
Fixed a bug with the TSFileSource's ITSFileSource property page Method that was stopping the page from displaying when called.
Fixed a divide by zero bug that was causing the filter to crash when you tried to run the filter with a zero duration file then tried to stop it.

Version 2.1.1.8
=================
bear:
Fixed a problem with the seeking of the filtergraph after a change of streams or files.
Fixed the problem where the video pin was not re-rendered when changing to a audio only program stream.
Added a flow rate value to the stream name in the IAMStreamSelect menu list for Network streams so you can see if they are running.
Added a restart method for the Network filtergraphs if the net data flow stops for longer than 2 seconds and then graph will close if longer than 10 seconds.
Added a ShowStreamMenu() function to the ITSFileSource interface, it will create a mouse controlled popup menu of the streams list, this has been extended to the Prop page using the mouse right click to enable stream selection.
Fixed a threading issue with the property page where it was locking up if you were to operate buttons too quickly.
Changed the look of the menu in the IAMStreamSelect Interface.