@@ -143,10 +143,11 @@ HRESULT MultiFileReader::Read(PBYTE pbData, ULONG lDataLength, ULONG *dwReadByte
 	if (m_TSBufferFile.IsFileInvalid())
 		return S_FALSE;
 
+	RefreshTSBufferFile();
+
 	if (m_currentPosition < m_startPosition)
 		m_currentPosition = m_startPosition;
 
-	RefreshTSBufferFile();
 	// Find out which file the currentPosition is in.
 	MultiFileReaderFile *file = NULL;
 	std::vector<MultiFileReaderFile *>::iterator it = m_tsFiles.begin();
@@ -306,6 +307,7 @@ HRESULT MultiFileReader::RefreshTSBufferFile()
 		m_TSBufferFile.Read((LPBYTE)pBuffer, remainingLength, &bytesRead);
 		if (bytesRead < remainingLength)
 		{
+			delete[] pBuffer;
 			::OutputDebugString(TEXT("What's going on?\n"));
 			return E_FAIL;
 		}
