@@ -228,21 +228,16 @@ HRESULT StreamParser::ParsePidArray()
 			streams.Clear();
 			LoadStreamArray(count);
 			AddStreamArray();
+			wsprintfW(StreamArray[index].name, L"UDP@ %S : %S : %S [%lukb/s]",
+												(*m_pNetArray)[i].strIP,
+												(*m_pNetArray)[i].strPort,
+												(*m_pNetArray)[i].strNic,
+												(__int64)((*m_pNetArray)[i].flowRate * 80)/10000);
 			if ((*m_pNetArray)[i].playing)
-			{
-				wsprintfW(StreamArray[index].name, L"UDP@ %S : %S : %S [%lukb/s]",
-											(*m_pNetArray)[i].strIP,
-											(*m_pNetArray)[i].strPort,
-											(*m_pNetArray)[i].strNic,
-											(__int64)((*m_pNetArray)[i].flowRate * 80)/10000);
 				StreamArray[index].flags = AMSTREAMSELECTINFO_ENABLED;
-			}
-//			else
-//				wsprintfW(StreamArray[index].name, L"  UDP@ %S : %S : %S [%lukb/s]",
-//											(*m_pNetArray)[i].strIP,
-//											(*m_pNetArray)[i].strPort,
-//											(*m_pNetArray)[i].strNic,
-//											(__int64)((*m_pNetArray)[i].flowRate * 80)/10000);
+			else
+				StreamArray[index].flags = 0;
+
 			i++;
 			index++;
 		}
@@ -264,20 +259,21 @@ void StreamParser::SetStreamActive(int group)
 	int count = 0;
 	while (count < StreamArray.Count())
 	{
-		StreamArray[count].flags = 0;
-//		memcpy(StreamArray[count].name, &L"  ", 4);
+		if (m_pNetArray->Count())
+		{
+			if (count <= count - m_pNetArray->Count())
+				StreamArray[count].flags = 0;
+		}
 
 		if (StreamArray[count].group == group)
 		{
 			if (StreamArray[count].Vid | StreamArray[count].H264 | StreamArray[count].Mpeg4)
 			{
-//				memcpy(StreamArray[count].name, &L"->", 4);
 				StreamArray[count].flags = AMSTREAMSELECTINFO_ENABLED;
 			}
 			else if (StreamArray[count].Pid == m_pDemux->m_SelAudioPid)
 			{
 				StreamArray[count].flags = AMSTREAMSELECTINFO_EXCLUSIVE | AMSTREAMSELECTINFO_ENABLED; //AMSTREAMSELECTINFO_ENABLED;
-//				memcpy(StreamArray[count].name, &L"->", 4);
 				m_StreamIndex = count;
 			}
 		}
