@@ -1,6 +1,9 @@
 Version 2.2.0.0
 =================
 bear:
+Fixed a issue with the Source Load() function where it was changing the filename paramater's pointer value.
+Fixed a bug with the Multifilereader mode where it was not seeking correctly when the TSFileSink buffer size was reached.
+Fixed a bug with the Multifilereader mode where it was not re-seeking correctly after changing program streams.
 Changed the IAMStreamSelect menu display, does not display pointers in the menu name anymore.
 Fixed a bug with the MultiFileReader::Read() function where it was trying to read data past the end of the file.
 Found and fixed a few more potential divide by zero bugs.
